--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         #5 Définir les transitions
                       </a>
                     </div>
-                    <div id="collapseFive" class="collapse" data-parent="#accordion">
+                    <div id="collapseFive" class="collapse" data-parent="#accordion"> 
                       <div class="card-body">
                         <!-- Editable table -->
                           <div class="card-body">
@@ -227,7 +227,7 @@
                     </div>
                   </div><br>
                 </div>
-                <div class="right"><button onclick="updateReduction()" class="btn btn-lg btn-block aqua-gradient">Mise à jour de l'automate</button></div>
+                <div class="right"><button onclick="updateTransition()" class="btn btn-lg btn-block aqua-gradient">Mettre A Jour</button></div>
                 <br>
                 
             </div>
