--- a/index.html
+++ b/index.html
@@ -479,9 +479,9 @@
               <h3>Lecture</h3>
               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
               <div class="md-form">
-                <input type="text" id="aLire" class="form-control">
+                <input type="text" id="aLire" oninput="lecture()" class="form-control">
                 <label for="aLire">Entrer le mot a lire ... </label>
-                <button onclick="lecture()" class="btn btn-light btn-block" id="lecture">Lire</button>
+                <button class="btn btn-lg btn-block btn-light waves-effect waves-light" id="lecture">Entrer un mot</button>
               </div>
             </div>
           </div>
