--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>TP_THP</title>
+  <title>Automates</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
@@ -21,7 +21,7 @@
     <div class="flex-center flex-column">
       <div class="section-1 col-12">
         <div class="container mt-3" id="myTP">
-          <h2>TP_THP</h2>
+          <h2>Automates</h2>
           <br>
           <!-- Nav tabs -->
           <ul class="nav nav-tabs">
