--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript" src="tables.js"></script>
   <script type="text/javascript" src="myFunctions.js"></script>
-  <script type="text/javascript" src="js/filesaver.js"></script>
+  <!--<script type="text/javascript" src="js/filesaver.js"></script>-->
 
 </body>
 </html>
