--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="modal-body">
                   1. Après que vous définissez votre automate, cliquer sur le bouton METTRE A JOUR <br>
                   2. Vous pouvez effectuer l'opération miroir sur l'automate en cliquant sur le bouton MIROIR, n'oubliez pas de mettre à jour l'automate après cette opération<br>
-                  3. A chaque fois que vous modifier quelque chose (il suffit de cliquer sur une case pour modifier) dans l'onglet "Introduire" , vous devez mettre à jour l'automate <br>
+                  3. A chaque fois que vous modifiez quelque chose (il suffit de cliquer sur une case pour la modifier) dans l'onglet "Introduire" , vous devez mettre à jour l'automate <br>
                   4. La transition "epsilon" est designée par une case de mot vide <br>
                   <br><br><br>
                   Pour nous contacter: <br>
