--- a/index.html
+++ b/index.html
@@ -515,13 +515,21 @@
               </div>
 
             </div>
-            <!--/Les Résultats-------------------------------------------->
+            <!--/Reconnaissance-------------------------------------------->
             <div id="menu2" class="container tab-pane fade"><br>
               <h3>Reconnaissance d'un mot: </h3>
               <div class="md-form">
                 <input type="text" id="aLire" oninput="lecture()" class="form-control">
                 <label for="aLire">Entrer le mot a lire ... </label>
                 <button class="btn btn-lg btn-block btn-light waves-effect waves-light" id="lecture">Entrer un mot</button>
+              </div>
+              <div style="padding-top: 5%;">
+                <h3>Graph:</h3>
+                <center>
+                  <div class="p-5" id="graph" style="overflow-x: scroll;padding: 5%;">
+                    
+                  </div>
+                </center>
               </div>
             </div>
           </div>
@@ -533,7 +541,8 @@
   </div>
 <!----------------------------------------------------------------------------->
   <!-- End your project here-->
-
+  <!-- Viz: this is for drawing the automate -->
+  <script src="viz.js"></script>
   <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
@@ -546,6 +555,5 @@
   <script type="text/javascript" src="tables.js"></script>
   <script type="text/javascript" src="myFunctions.js"></script>
   <!--<script type="text/javascript" src="js/filesaver.js"></script>-->
-
 </body>
 </html>
