Graphe colored when red

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 </thead>
                                 <tbody id="initMir">
                                   <tr>
-                                  <td class="pt-3-half" contenteditable="true">SI</td>
+                                  <td class="pt-3-half" contenteditable="true">S-</td>
                                   </tr>
                                 </tbody>
                               </table>
@@ -204,7 +204,7 @@
                                 </thead>
                                 <tbody id="finMir">
                                   <tr>
-                                    <td class="pt-3-half" contenteditable="true">SFi</td>
+                                    <td class="pt-3-half" contenteditable="true">S+</td>
                                     <td>
                                       <span class="table-remove" id="remove4"><button type="button" class="btn btn-danger btn-rounded btn-sm my-0 waves-effect waves-light">Remove</button></span>
                                     </td>
