--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="section-1 col-12">
         <div class="container mt-3" id="myTP">
           <div class="d-flex">
-            <h2 class="col-10">Les Automates</h2>
+            <h2 class="col-10"><strong>Les Automates</strong></h2>
             <!-- Button trigger modal -->
             <button id="modalActivate" type="button" class="btn btn-sm btn-light" data-toggle="modal" data-target="#exampleModalPreview">
               <i class="far fa-3x fa-question-circle"></i>
@@ -40,6 +40,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
+                <strong>
                   1. Après que vous définissez votre automate, cliquer sur le bouton METTRE A JOUR <br>
                   2. Vous pouvez effectuer l'opération miroir sur l'automate en cliquant sur le bouton MIROIR, n'oubliez pas de mettre à jour l'automate après cette opération<br>
                   3. A chaque fois que vous modifiez quelque chose (il suffit de cliquer sur une case pour la modifier) dans l'onglet "Introduire" , vous devez mettre à jour l'automate <br>
@@ -48,7 +49,7 @@
                   Pour nous contacter: <br>
                   BOUCHERIR Mohamed-Zineddine: hm_boucherir@esi.dz <br>
                   BOUIDAINE Diaeddin: hd_bouidaine@esi.dz
-                  
+                </strong>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
