--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 <button class="btn btn-lg btn-block btn-light waves-effect waves-light" id="lecture">Entrer un mot</button>
               </div>
               <div style="padding-top: 5%;">
-                <h3>Graph:</h3>
+                <h3>Graph de l'automate deterministe:</h3>
                 <center>
                   <div class="p-5" id="graph" style="overflow-x: scroll;padding: 5%;">
                     
